Fixed z-index

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -63,19 +63,18 @@ header .highlight, header .current a {
   width: 100%;
   height: 600px;
   margin-top: 85px;
-  position: fixed;
+  z-index: -1;
 }
 
 #map{
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 #options{
-  margin-top: 685px;
   height: 1000px;
   width: 100%;
-  position: fixed;
   z-index: -1;
 }
 
